# ubpf

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: main.yml  posix.yml  windows.yml
cmake/: options.cmake  packaging.cmake  platform.cmake  settings.cmake  version.cmake
test_framework/: expand-testcase.py  test_assembler.py  test_disassembler.py  test_elf.py  test_jit.py  test_vm.py  testdata.py
tests/: reload.data  stack3.data
tests/elf/: ehdr-short.data
ubpf/: assembler.py  disassembler.py
vm/: CMakeLists.txt  Makefile  test.c  ubpf_config.h.inc  ubpf_int.h  ubpf_jit.c  ubpf_jit_arm64.c  ubpf_jit_x86_64.c  ubpf_jit_x86_64.h  ubpf_loader.c  ubpf_vm.c
vm/compat/: CMakeLists.txt
vm/compat/libraries/: CMakeLists.txt
vm/compat/libraries/win-c/: CMakeLists.txt
vm/compat/macos/: endian.h
vm/compat/windows/: endian.h  unistd.c  unistd.h
vm/compat/windows/sys/: mman.c  mman.h
vm/inc/: ubpf.h
